Backport advanced pattern provider parser syntax to Java 8